# p2ptransfer

./: .gitignore  Makefile  go.mod
cli/: Cargo.toml
cli/src/: main.rs  progress.rs  protocol.rs  receiver.rs  sender.rs  signaling.rs
cmd/server/: main.go
deploy/: Dockerfile  azure-deploy-steps.sh  azure-nsg.sh  azure-setup.sh  docker-compose.yml  setup.sh
deploy/coturn/: turnserver.conf
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: fasttransfer.conf
internal/handlers/: handlers.go  relay.go  relay_ws.go  turn.go
internal/signaling/: hub.go  room.go
web/static/: robots.txt  sitemap.xml
web/static/css/: style.css
web/static/js/: receive.js  send.js  sw.js  transfer.js
web/templates/: index.html  receive.html  send.html
